@@ -31,7 +31,7 @@ public class ScalingHealth implements IModBase {
     public static final String MOD_ID_OLD = "ScalingHealth";
     public static final String MOD_ID_LOWER = "scalinghealth";
     public static final String MOD_NAME = "Scaling Health";
-    public static final String VERSION = "1.3.28";
+    public static final String VERSION = "1.3.29";
     public static final String VERSION_SILENTLIB = "3.0.4";
     public static final int BUILD_NUM = 0;
     public static final String DEPENDENCIES = "required-after:silentlib@[" + VERSION_SILENTLIB + ",);after:morpheus";
